adding task template

--- a/4_Docking/Docking.ipynb
+++ b/4_Docking/Docking.ipynb
@@ -1299,6 +1299,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "<b>Task 1:</b> Can you think of examples of features that you would find in molecular simulations?</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary> <mark> Solution: </mark> </summary>\n",
+    "\n",
+    "Examples are:\n",
+    "- C-alpha positions\n",
+    "- angles\n",
+    "- dihedrals\n",
+    "- RMSD\n",
+    "- density\n",
+    "- surface area\n",
+    "- ...\n",
+    "\n",
+    "</details>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
