updated simulation jupyter notebook and slides

--- a/3_Simulation_Setup/1_ligand_in_water.ipynb
+++ b/3_Simulation_Setup/1_ligand_in_water.ipynb
@@ -33,22 +33,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "271a4a37-89a4-4d00-944f-8c1dccbd0037",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "<b>This tutorial</b> only runs on Colab or locally on Linux or OSX machines. Windows is not supported.</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "57061521-6360-4cdb-9ca9-ec2e69bbff46",
    "metadata": {},
    "source": [
     "## Jupyter cheat sheet\n",
     "- to run the currently highlighted cell, hold <kbd>&#x21E7; Shift</kbd> and press <kbd>&#x23ce; Enter</kbd>;\n",
     "- to get help for a specific function, place the cursor within the function's brackets, hold <kbd>&#x21E7; Shift</kbd>, and press <kbd>&#x21E5; Tab</kbd>;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a27e8d79-6c3f-4cd0-8807-e649e4e1f3e1",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-warning\"><b> REMEMBER: variables persist between cells</b> \n",
-    "    \n",
-    "Be aware that it is the order of execution of cells that is important in a Jupyter notebook, not the <em>order</em> in which they appear. Python will remember <em>all</em> the code that was run previously, including any variables you have defined, irrespective of the order in the notebook. Therefore if you define variables lower down the notebook and then (re)run cells further up, those defined further down will still be present. </div> "
    ]
   },
   {
@@ -73,7 +72,7 @@
     "condacolab.install()\n",
     "\n",
     "import condacolab\n",
-    "!mamba install -c conda-forge mdtraj nglview openmm openmm.app openmm.unit openff rich ipywidgets=7.6.0"
+    "!mamba install -c conda-forge mdtraj nglview openmm openff-toolkit rich ipywidgets=7.6.0"
    ]
   },
   {
@@ -115,11 +114,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
+    "import time, os\n",
     "\n",
     "import mdtraj\n",
     "import nglview\n",
     "import numpy\n",
+    "import pandas\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "import openmm\n",
     "import openmm.app\n",
     "import openmm.unit\n",
@@ -135,14 +137,43 @@
    "id": "2",
    "metadata": {},
    "source": [
-    "# 1. Construct the topology\n",
-    "\n",
-    "In this example we will construct a topology consisting of one ligand in a rhombic dodecahedral box with 2100 water molecules. We'll use a _mapped_ SMILES when creating `Molecule` objects to ensure the atom ordering matches. *Atom ordering is not strictly a part of SMILES, and therefore liable to be changed with updates to RDKit.*\n",
+    "# 1. Construct the topology"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0fac4ce-36af-4a59-a798-526fe63b2799",
+   "metadata": {},
+   "source": [
+    "In this example we will construct a topology consisting of one ligand in a rhombic dodecahedral box with water molecules. We will use a _mapped_ SMILES when creating `Molecule` objects to ensure the atom ordering matches. *Atom ordering is not strictly a part of SMILES, and therefore liable to be changed with updates to RDKit.*\n",
     "\n",
     "This can be extended or modified by, i.e.:\n",
     "* Replacing this sample ligand with a different ligand of interest - substitute out the ligand SMILES\n",
     "* Using a different number of water molecules - substitute out the `2100` used below\n",
-    "* Adding ions or co-solvents into the box - add more `Molecule` object as desired\n"
+    "* Adding ions or co-solvents into the box - add more `Molecule` object as desired"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b00dfb4-d3cf-4788-8dff-9850b58b08dc",
+   "metadata": {},
+   "source": [
+    "We will start by loading the SMILES string of the ligand we studies in our [previous tutorial](../4_Docking/Docking.ipynb) on docking."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "957a7048-1250-4287-b6bc-261950d36d62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fin = open(f\"..{os.sep}4_Docking{os.sep}resources{os.sep}lig27.smi\", \"r\")\n",
+    "lig27_smiles = fin.readline().strip()\n",
+    "fin.close()\n",
+    "lig27_smiles\n",
+    "# alternatively, use this other ligand (uncomment the line below)!\n",
+    "# lig27_smiles = \"[H:7][C@:6]1([C:13](=[C:11]([C:9](=[O:10])[O:8]1)[O:12][H:19])[O:14][H:20])[C@:3]([H:4])([C:2]([H:16])([H:17])[O:1][H:15])[O:5][H:18]\""
    ]
   },
   {
@@ -152,9 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ligand = Molecule.from_mapped_smiles(\n",
-    "    \"[H:7][C@:6]1([C:13](=[C:11]([C:9](=[O:10])[O:8]1)[O:12][H:19])[O:14][H:20])[C@:3]([H:4])([C:2]([H:16])([H:17])[O:1][H:15])[O:5][H:18]\"\n",
-    ")\n",
+    "ligand = Molecule.from_mapped_smiles(lig27_smiles)\n",
     "water = Molecule.from_mapped_smiles(\"[H:2][O:1][H:3]\")\n",
     "\n",
     "# Naming the residue is not needed to parameterize the system or run the simulation, but makes visualization easier\n",
@@ -220,10 +249,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interchange: Interchange = Interchange.from_smirnoff(\n",
-    "    force_field=sage, topology=topology\n",
-    ")\n",
+    "interchange: Interchange = Interchange.from_smirnoff(force_field=sage, topology=topology)\n",
     "interchange.topology.n_atoms, interchange.box, interchange.positions.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ba60dd6-c8f1-4dd5-aaa2-c4f1a2e1f8bf",
+   "metadata": {},
+   "source": [
+    "# 2. Run a short equilibration simulation"
    ]
   },
   {
@@ -254,6 +289,7 @@
     "    interchange: Interchange,\n",
     "    pdb_stride: int = 500,\n",
     "    trajectory_name: str = \"trajectory.pdb\",\n",
+    "    fout_name: str = \"data.csv\"\n",
     ") -> openmm.app.Simulation:\n",
     "    integrator = openmm.LangevinIntegrator(\n",
     "        300 * openmm.unit.kelvin,\n",
@@ -281,7 +317,7 @@
     "\n",
     "    pdb_reporter = openmm.app.PDBReporter(trajectory_name, pdb_stride)\n",
     "    state_data_reporter = openmm.app.StateDataReporter(\n",
-    "        \"data.csv\",\n",
+    "        fout_name,\n",
     "        10,\n",
     "        step=True,\n",
     "        potentialEnergy=True,\n",
@@ -301,7 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simulation = create_simulation(interchange)"
+    "simulation = create_simulation(interchange, fout_name=\"data_300.csv\")"
    ]
   },
   {
@@ -309,9 +345,7 @@
    "id": "13",
    "metadata": {},
    "source": [
-    "Finally, we can run this simulation. This should take approximately 10-20 seconds on a laptop or small workstation.\n",
-    "\n",
-    "Again, let's wrap this up into a function to avoid copy-pasting code."
+    "Finally, we can run this simulation. To avoid copy-pasting code, let's first wrap everything up into a function."
    ]
   },
   {
@@ -342,7 +376,7 @@
    "id": "15",
    "metadata": {},
    "source": [
-    "We should observe (small) fluctuations in the density of the simulation, which is running under the NPT ensemble. If the initial density was a good guess, there shouldn't be significant changes from the initial value around $30~nm^3$."
+    "Time to run the simulation! This should take approximately 10-30 seconds on a laptop or small workstation."
    ]
   },
   {
@@ -353,6 +387,96 @@
    "outputs": [],
    "source": [
     "run_simulation(simulation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b9e27ff-ffde-408a-899a-0886f80e5407",
+   "metadata": {},
+   "source": [
+    "This will generate a file called <code>data_300.csv</code>, featuring all the reporters we initialized in the function <code>create_simulation</code> we created above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c30316c-36cc-4686-a630-e207ac365bed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reporters = pandas.read_csv(\"data_300.csv\")\n",
+    "reporters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74cda54a-3e26-4a8e-8c5c-152ddccb02ae",
+   "metadata": {},
+   "source": [
+    "Let's plot the data we have saved. Again, let's write a plotting function, we will need it for later!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99e6b325-c4ac-41db-8317-d33c220c1481",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_reporters(reporfilename):\n",
+    "\n",
+    "  reporters = pandas.read_csv(reporfilename)\n",
+    "\n",
+    "  fig, axs = plt.subplots(1, 3, figsize=(14, 3))\n",
+    "  axs[0].plot(reporters['#\"Step\"'], reporters['Potential Energy (kJ/mole)'])\n",
+    "  axs[0].set_xlabel(\"step\")\n",
+    "  axs[0].set_ylabel('Potential Energy (kJ/mole)')\n",
+    "\n",
+    "  axs[1].plot(reporters['#\"Step\"'], reporters['Temperature (K)'])\n",
+    "  axs[1].set_xlabel(\"step\")\n",
+    "  axs[1].set_ylabel('Temperature (K)')\n",
+    "\n",
+    "  axs[2].plot(reporters['#\"Step\"'], reporters['Density (g/mL)'])\n",
+    "  axs[2].set_xlabel(\"step\")\n",
+    "  axs[2].set_ylabel('Density (g/mL)');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4d97822-9fe2-4f2b-8ace-00c6b1f20def",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_reporters(\"data_300.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d650ff68-1509-4528-8eb2-9de4f2312dfd",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "<b>Task 1: </b> What happens if you increase the temperature of the simulation to 340 K?\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdb1e645-4989-42ef-a022-719a031c5eef",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary> <mark> Solution: </mark> </summary>\n",
+    "\n",
+    "Start by editing the function <code>create_simulation</code>, changing the temperature from 300 to 340 K, then call it again:\n",
+    "\n",
+    "```Python\n",
+    "simulation = create_simulation(interchange, fout_name=\"data_340.csv\")\n",
+    "run_simulation(simulation)\n",
+    "plot_reporters(\"data_340.csv\")\n",
+    "```\n",
+    "</details>"
    ]
   },
   {
@@ -384,7 +508,7 @@
    "id": "19",
    "metadata": {},
    "source": [
-    "# 2. Using the OPC water model\n",
+    "# 3. Run a simulation with the OPC water model\n",
     "\n",
     "The `openff-forcefields` package now includes some common water models. After release 2023.05.1, this includes OPC, a 4-site water model from the Amber community. We can load it by simply passing it to the `ForceField` constructor after Sage. (When loading multiple force fields like this, parameters in each section are appended in order of the files.) We can inspect the virtual site parameter in our new in-memory force field."
    ]
@@ -439,10 +563,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interchange_opc = Interchange.from_smirnoff(\n",
-    "    force_field=force_field_opc,\n",
-    "    topology=topology,\n",
-    ")"
+    "interchange_opc = Interchange.from_smirnoff(force_field=force_field_opc, topology=topology)"
    ]
   },
   {
@@ -496,7 +617,6 @@
     "    view.add_representation(\"licorice\", selection=\"water\")\n",
     "    return view\n",
     "\n",
-    "\n",
     "# NGLview likes to infer bonds between virtual sites in ways that look messy,\n",
     "# but you can pass `show_virtual_sites=True` just to ensure they're there\n",
     "view_trajectory(mdtraj.load(\"trajectory_opc.pdb\"))"
@@ -507,9 +627,9 @@
    "id": "28",
    "metadata": {},
    "source": [
-    "# 3. Using the TIP4P-FB water model with GROMACS\n",
+    "# 4. Using the TIP4P-FB water model with GROMACS\n",
     "\n",
-    "The `openff-forcefields` package includes several other common water models. The toolkit provides an API for listing the force fields found in your current installation. We can filter out some force field lines and get a picture of the water models available to us. At the time of writing, TIP4P-FB and OPC3 are also provided, but future releases will likely add more. (See the [repo's documentation](https://github.com/openforcefield/openff-forcefields/blob/main/docs/water-models.md#versioning) for why multiple copies of each force field are provided with slightly different versions.)"
+    "The `openff-forcefields` package includes several other common water models. The toolkit provides an API for listing the force fields found in your current installation. We can filter out some force field lines and get a picture of the water models available to us. At the time of writing, TIP4P-FB and OPC3 are also provided, but future releases will likely add more. *See the [repo's documentation](https://github.com/openforcefield/openff-forcefields/blob/main/docs/water-models.md#versioning) for why multiple copies of each force field are provided with slightly different versions.*"
    ]
   },
   {
@@ -552,7 +672,7 @@
    "id": "32",
    "metadata": {},
    "source": [
-    "From here we can create a new `Interchange` object - only necessary since we're using a different force field - and use the `Interchange.to_gromacs` method to write GROMACS files. We'll also run an energy minimization before writing otu GROMACS files - this could also be done as an extra step with GROMACS, but it's convient to just call it from the Interchange API here."
+    "From here we can create a new `Interchange` object - only necessary since we're using a different force field - and use the `Interchange.to_gromacs` method to write GROMACS files. We'll also run an energy minimization before writing out GROMACS files - this could also be done as an extra step with GROMACS, but it's convient to just call it from the Interchange API here."
    ]
   },
   {
@@ -578,7 +698,34 @@
    "id": "34",
    "metadata": {},
    "source": [
-    "Now, with GROMACS files written, we can use the bundled `run.mdp` file to compile and run a GROMACS simulation!"
+    "Now, with GROMACS files written, we can use the bundled `run.mdp` file to compile and run a GROMACS simulation. For that GROMACS needs to be available on your computer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0e8b7af-afbb-46cc-8e78-bea6f851e7e2",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "<b>Running GROMACS:</b> the following cells require GROMACS to be installed in your machine. If you are on Colab, or running locally on a Linux machine on which you do not have GROMACS already, run the cell below</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18a4112f-daa1-4768-ad65-918e0eef10f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!apt install gromacs &> /dev/null"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99679d1c-65fc-4828-9554-d8122f880232",
+   "metadata": {},
+   "source": [
+    "If GROMACS is available, you can now run then simulation executing the next cell."
    ]
   },
   {
@@ -590,6 +737,14 @@
    "source": [
     "!gmx grompp -p tip4p.top -c tip4p.gro -f run.mdp -o run.tpr -maxwarn 1\n",
     "!gmx mdrun --deffnm run"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef8a459c-1fcb-4437-affa-52f91f1cf8f4",
+   "metadata": {},
+   "source": [
+    "The folder <code>3_simulation_setup</code> (i.e., our current working directory) should now contain the simulation output"
    ]
   },
   {
@@ -605,6 +760,14 @@
    "source": [
     "# This view might show erroneous bonds across the periodic boundaries, but individual waters should look fine\n",
     "view_trajectory(mdtraj.load(\"run.xtc\", top=\"run.gro\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f18b5a40-a8af-46a9-af18-f09eb601ddfd",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   }
  ],
