patched simulation setup notebook

--- a/4_Simulation_Setup/1_ligand_in_water.ipynb
+++ b/4_Simulation_Setup/1_ligand_in_water.ipynb
@@ -96,7 +96,7 @@
    "source": [
     "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then git clone https://github.com/CCPBioSim/CCP5_Simulation_of_BioMolecules; fi\n",
     "import os\n",
-    "os.chdir(f\"CCP5_Simulation_of_BioMolecules{os.sep}3_Simulation_Setup\")"
+    "os.chdir(f\"CCP5_Simulation_of_BioMolecules{os.sep}4_Simulation_Setup\")"
    ]
   },
   {
@@ -158,7 +158,7 @@
    "id": "2b00dfb4-d3cf-4788-8dff-9850b58b08dc",
    "metadata": {},
    "source": [
-    "We will start by loading the SMILES string of the ligand we studies in our [previous tutorial](../4_Docking/Docking.ipynb) on docking."
+    "We will start by loading the SMILES of a molecule. In the cell below you see two options the default one being ligand studied in the [previous tutorial](../4_Docking/Docking.ipynb) on docking. You can toggle from one to the other by replacing <code>True</code> with <code>False</code>."
    ]
   },
   {
@@ -168,12 +168,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fin = open(f\"..{os.sep}4_Docking{os.sep}resources{os.sep}lig27.smi\", \"r\")\n",
-    "lig27_smiles = fin.readline().strip()\n",
-    "fin.close()\n",
-    "lig27_smiles\n",
-    "# alternatively, use this other ligand (uncomment the line below)!\n",
-    "# lig27_smiles = \"[H:7][C@:6]1([C:13](=[C:11]([C:9](=[O:10])[O:8]1)[O:12][H:19])[O:14][H:20])[C@:3]([H:4])([C:2]([H:16])([H:17])[O:1][H:15])[O:5][H:18]\""
+    "if True:\n",
+    "  fin = open(f\"..{os.sep}4_Docking{os.sep}resources{os.sep}lig27.smi\", \"r\")\n",
+    "  lig27_smiles = fin.readline().strip()\n",
+    "  fin.close()\n",
+    "  lig27_smiles\n",
+    "else:\n",
+    "  lig27_smiles = \"[H:7][C@:6]1([C:13](=[C:11]([C:9](=[O:10])[O:8]1)[O:12][H:19])[O:14][H:20])[C@:3]([H:4])([C:2]([H:16])([H:17])[O:1][H:15])[O:5][H:18]\""
    ]
   },
   {
@@ -331,6 +332,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "039356ec-8981-4af0-b65a-43fe19f63d16",
+   "metadata": {},
+   "source": [
+    "We can now create our simulation, set-up so that simulation reporters are saved in the file <code>fout_name</code>."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "12",
@@ -363,7 +372,7 @@
     "\n",
     "    for step in range(n_steps):\n",
     "        simulation.step(1)\n",
-    "        if step % 500 == 0:\n",
+    "        if step % 500 == 0: # print text every 500 steps\n",
     "            box_vectors = simulation.context.getState().getPeriodicBoxVectors()\n",
     "            print(step, numpy.linalg.det(box_vectors._value).round(3))\n",
     "\n",
@@ -453,34 +462,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d650ff68-1509-4528-8eb2-9de4f2312dfd",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "<b>Task 1: </b> What happens if you increase the temperature of the simulation to 340 K?\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fdb1e645-4989-42ef-a022-719a031c5eef",
-   "metadata": {},
-   "source": [
-    "<details>\n",
-    "<summary> <mark> Solution: </mark> </summary>\n",
-    "\n",
-    "Start by editing the function <code>create_simulation</code>, changing the temperature from 300 to 340 K, then call it again:\n",
-    "\n",
-    "```Python\n",
-    "simulation = create_simulation(interchange, fout_name=\"data_340.csv\")\n",
-    "run_simulation(simulation)\n",
-    "plot_reporters(\"data_340.csv\")\n",
-    "```\n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "17",
    "metadata": {},
    "source": [
@@ -501,6 +482,36 @@
     "view = nglview.show_mdtraj(mdtraj.load(\"trajectory.pdb\"))\n",
     "view.add_representation(\"licorice\", selection=\"water\")\n",
     "view"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d650ff68-1509-4528-8eb2-9de4f2312dfd",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "<b>Task 1: </b> What happens if you increase the temperature of the simulation to 340 K? And how about changing the input SMILES string?\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdb1e645-4989-42ef-a022-719a031c5eef",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary> <mark> Solution: </mark> </summary>\n",
+    "\n",
+    "To run with a different molecule, toggle <code>True</code> to <code>False</code> in the first cell of the section <code>1. Construct to Topology</code>, and re-run the notebook.\n",
+    "\n",
+    "To change the temperature editing the function <code>create_simulation</code>, changing the temperature from 300 to 340 K, then call it again:\n",
+    "\n",
+    "```Python\n",
+    "simulation = create_simulation(interchange, fout_name=\"data_340.csv\")\n",
+    "run_simulation(simulation)\n",
+    "plot_reporters(\"data_340.csv\")\n",
+    "```\n",
+    "</details>"
    ]
   },
   {
