adding smiles and docking file

--- a/3_Docking/Docking.ipynb
+++ b/3_Docking/Docking.ipynb
@@ -91,7 +91,7 @@
    "source": [
     "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then git clone https://github.com/CCPBioSim/CCP5_Simulation_of_BioMolecules; fi\n",
     "import os\n",
-    "os.chdir(f\"CCP5_Simulation_of_BioMolecules{os.sep}4_Docking\")"
+    "os.chdir(f\"CCP5_Simulation_of_BioMolecules{os.sep}3_Docking\")"
    ]
   },
   {
@@ -345,47 +345,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "T8Mbw9KE6Xss"
-   },
-   "source": [
-    "### 0.5 Autodock Vina\n",
-    "Finally, we will download the Autodock Vina program from the [AutoDock Vina GitHub](https://github.com/ccsb-scripps/AutoDock-Vina) and make an alias to use it during this session"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "k4UpudGkCUYn"
-   },
-   "outputs": [],
-   "source": [
-    "# Download and extract Autodock Vina from SCRIPPS\n",
-    "# Then, we set up an alias for vina to be treated as a native binary\n",
-    "%%bash\n",
-    "mkdir vina\n",
-    "cd vina\n",
-    "wget -q https://github.com/ccsb-scripps/AutoDock-Vina/releases/download/v1.2.5/vina_1.2.5_linux_x86_64\n",
-    "chmod +x /content/vina/vina_1.2.5_linux_x86_64\n",
-    "wget -q https://github.com/ccsb-scripps/AutoDock-Vina/releases/download/v1.2.5/vina_split_1.2.5_linux_x86_64\n",
-    "chmod +x /content/vina/vina_split_1.2.5_linux_x86_64"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "s-4Jw2Om7GEn"
-   },
-   "outputs": [],
-   "source": [
-    "%alias vina /content/vina/vina_1.2.5_linux_x86_64\n",
-    "%alias vina_split /content/vina/vina_1.2.5_linux_x86_64"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "5j24YCyD7Zlf"
    },
    "source": [
@@ -550,16 +509,16 @@
     "\n",
     "# Then, we define the path of the folder we want to create.\n",
     "# Notice that the HOME folder for a hosted runtime in colab is /content/\n",
-    "singlepath = Path(\"/content/single-dock/\")\n",
-    "singlepath = Path(\"single_dock\")\n",
+    "docking_path = Path(\"/content/single-dock/\")\n",
+    "#docking_path = Path(\"single_dock\")\n",
     "\n",
     "# Now, we create the folder using the os.mkdir() command\n",
     "# The if conditional is just to check whether the folder already exists\n",
     "# In which case, python returns an error\n",
-    "if os.path.exists(singlepath):\n",
+    "if os.path.exists(docking_path):\n",
     "    print(\"path already exists\")\n",
     "else:\n",
-    "    os.mkdir(singlepath)\n",
+    "    os.mkdir(docking_path)\n",
     "    print(\"path was succesfully created\")\n",
     "\n",
     "# Now we assign a variable \"protein\" with the name and extension of our pdb\n",
@@ -568,7 +527,7 @@
     "# we create a universe with the protein\n",
     "u = mda.Universe(protein)\n",
     "prot_sel = u.select_atoms(\"record_type ATOM and segid B\")\n",
-    "prot_sel.write(os.path.join(singlepath, \"6o6f_prot_chainB.pdb\"))\n"
+    "prot_sel.write(os.path.join(docking_path, \"6o6f_prot_chainB.pdb\"))\n"
    ]
   },
   {
@@ -628,7 +587,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pdb2pqr30 --ff AMBER --titration-state-method propka --with-ph 7.4 $singlepath/6o6f_prot_chainB.pdb $singlepath/6o6f_prot_chainB.pqr"
+    "!pdb2pqr30 --ff AMBER --titration-state-method propka --with-ph 7.4 $docking_path/6o6f_prot_chainB.pdb $docking_path/6o6f_prot_chainB.pqr"
    ]
   },
   {
@@ -644,9 +603,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u = mda.Universe(os.path.join(singlepath,\"6o6f_prot_chainB.pqr\"))\n",
+    "u = mda.Universe(os.path.join(docking_path,\"6o6f_prot_chainB.pqr\"))\n",
     "asel = u.select_atoms(\"all\")\n",
-    "asel.write(os.path.join(singlepath,\"6o6f.pdbqt\"))"
+    "asel.write(os.path.join(docking_path,\"6o6f.pdbqt\"))"
    ]
   },
   {
@@ -656,7 +615,7 @@
    "outputs": [],
    "source": [
     "# Now we need to get rid of the first two lines\n",
-    "filename = os.path.join(singlepath,\"6o6f.pdbqt\")\n",
+    "filename = os.path.join(docking_path,\"6o6f.pdbqt\")\n",
     "try:\n",
     "    # Open the input file in read mode\n",
     "    with open(filename, 'r') as infile:\n",
@@ -665,11 +624,13 @@
     "\n",
     "        # Skip the first two lines\n",
     "        lines_to_write = lines[2:]\n",
-    "\n",
+    "        #print(lines)\n",
     "    # Open the output file in write mode\n",
     "    with open(filename, 'w') as outfile:\n",
     "        # Write the remaining lines to the new file\n",
-    "        outfile.writelines(lines_to_write)"
+    "        outfile.writelines(lines_to_write)\n",
+    "except Exception as e:\n",
+    "  print(e,'Fail...muhahahah')"
    ]
   },
   {
@@ -685,7 +646,7 @@
     "This will keep the protein side chains rigid in the docking. If you want to use a flexible receptor you will have to use the script\n",
     "\n",
     "```\n",
-    "!prepare_receptor4.py -r $singlepath/6o6f_prot.pqr -o $singlepath/6o6f_prot.pdbqt -C -U nphs_lps -v\n",
+    "!prepare_receptor4.py -r $docking_path/6o6f_prot.pqr -o $docking_path/6o6f_prot.pdbqt -C -U nphs_lps -v\n",
     "```"
    ]
   },
@@ -754,10 +715,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !prepare_ligand4.py -l ligand.mol2 -o $singlepath/ligand.pdbqt -U nphs_lps -v\n",
-    "# NOTE: for some reason, MGLtools does not recognize the ligand when inside a different folder\n",
-    "# Here we are deleting the temporary PDB file required for generating the PDBQT file\n",
-    "os.remove(\"ligand.mol2\")"
+    "!prepare_ligand4.py -l ligand.mol2 -o $docking_path/ligand.pdbqt -U nphs_lps -v"
    ]
   },
   {
@@ -896,9 +854,9 @@
     "v = Vina(sf_name='vina')\n",
     "\n",
     "# Setting the protein\n",
-    "v.set_receptor(os.path.join(singlepath,'6o6f.pdbqt'))\n",
+    "v.set_receptor(os.path.join(docking_path,'6o6f.pdbqt'))\n",
     "# Setting the ligand\n",
-    "v.set_ligand_from_file(os.path.join(ligandpath,'ligand.pdbqt'))\n",
+    "v.set_ligand_from_file(os.path.join(docking_path,'ligand.pdbqt'))\n",
     "\n",
     "# Now we use the grid centre we computed before\n",
     "v.compute_vina_maps(center=grid_centre, box_size=[20, 20, 20])\n",
@@ -910,7 +868,7 @@
     "# Minimized locally the current pose\n",
     "energy_minimized = v.optimize()\n",
     "print('Score after minimization : %.3f (kcal/mol)' % energy_minimized[0])\n",
-    "v.write_pose('ligand_minized.pdbqt', overwrite=True)"
+    "v.write_pose(os.path.join(docking_path,'ligand_minized.pdbqt'), overwrite=True)"
    ]
   },
   {
@@ -933,7 +891,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u = mda.Universe('ligand_minized.pdbqt')\n",
+    "u = mda.Universe(os.path.join(docking_path,'ligand_minized.pdbqt'))\n",
     "sel = u.select_atoms('all')\n",
     "sel.write('minimized.pdb')"
    ]
@@ -1001,16 +959,28 @@
     "v = Vina(sf_name='vina')\n",
     "\n",
     "# Setting the protein\n",
-    "v.set_receptor(os.path.join(singlepath,'6o6f.pdbqt'))\n",
+    "v.set_receptor(os.path.join(docking_path,'6o6f.pdbqt'))\n",
     "# Setting the ligand\n",
-    "v.set_ligand_from_file(os.path.join(ligandpath,'ligand.pdbqt'))\n",
+    "v.set_ligand_from_file(os.path.join(docking_path,'ligand.pdbqt'))\n",
     "\n",
     "# Now we use the grid centre we computed before\n",
     "v.compute_vina_maps(center=grid_centre, box_size=[20, 20, 20])\n",
     "\n",
     "# Dock the ligand\n",
-    "v.dock(exhaustiveness=32, n_poses=20)\n",
-    "v.write_poses(os.path.join(ligandpath,'docked_ligand.pdbqt'), n_poses=5,energy_range=6,overwrite=True)"
+    "v.dock(exhaustiveness=32, n_poses=10)\n",
+    "v.write_poses(os.path.join(docking_path,'docked_ligand.pdbqt'), n_poses=3,energy_range=6,overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openbabel import pybel\n",
+    "mol = next(pybel.readfile(\"pdbqt\", os.path.join(docking_path,\"docked_ligand.pdbqt\")))\n",
+    "pybelmol = pybel.Molecule(mol)\n",
+    "pybelmol.write(\"pdb\", os.path.join(docking_path,\"docked.pdb\"), overwrite=True)"
    ]
   },
   {
@@ -1026,8 +996,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We need to convert our Autodock Vina results from pdbqt into pdb\n",
-    "# For this, we use babel\n",
+    "# If you want to convert our Autodock Vina results from pdbqt into many pdbs you can use this\n",
+    "# For this however the commandline bable option does not seem to work on colab\n",
     "!obabel -ipdbqt $ligandpath/docked_ligand.pdbqt -opdb -O $ligandpath/docked.pdb -m"
    ]
   },
@@ -1047,7 +1017,7 @@
     "view=py3Dmol.view()\n",
     "view.setBackgroundColor('white')\n",
     "# Loading the target protein as PDB file\n",
-    "view.addModel(open(singlepath/'6o6f_prot_chainB.pdb', 'r').read(),'pdb')\n",
+    "view.addModel(open(docking_path/'6o6f_prot_chainB.pdb', 'r').read(),'pdb')\n",
     "view.setStyle({'cartoon': {'color':'spectrum'}})\n",
     "view.zoomTo()\n",
     "# Loading the docking pose\n",
@@ -1127,21 +1097,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "7C8ZjiVDDMDg"
-   },
-   "outputs": [],
-   "source": [
-    "!cp CCP5_Simulation_of_BioMolecules/4_Docking/resources/lig27.smi /content/ligands/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!head CCP5_Simulation_of_BioMolecules/3_Docking/resources/lig27.smi"
+    "!head CCP5_Simulation_of_BioMolecules/3_Docking/resources/lig_27.smi"
    ]
   },
   {
@@ -1215,26 +1174,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "DWW3DTsY_J4F",
-    "outputId": "734419fc-180a-4778-d5bf-215aea1b0522"
-   },
-   "outputs": [],
-   "source": [
-    "# Print the SMILES of Lig 27 to see what it is all about\n",
-    "# smiles = ((ligandpath / \"lig27.smi\").read_text())\n",
-    "f = open(\"resources/lig_27.smi\", \"r\")\n",
-    "smiles = (f.readline())\n",
-    "f.close()\n",
-    "print(smiles)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "jYkw6q2gkGDH"
@@ -1256,10 +1195,11 @@
    "outputs": [],
    "source": [
     "from openbabel import pybel\n",
+    "smiles = 'O=C([O-])c1[nH]c2ccccc2c1CCCOc1ccccc1' #fixme, find the one for the right ligand\n",
     "mol = pybel.readstring(\"smi\", smiles)\n",
     "mol.addh()\n",
     "mol.make3D()\n",
-    "mol.write(\"mol2\", \"lig27.mol2\", overwrite=True)"
+    "mol.write(\"mol2\", \"lig_27.mol2\", overwrite=True) #fix me correct filename"
    ]
   },
   {
@@ -1274,7 +1214,7 @@
    },
    "outputs": [],
    "source": [
-    "# !prepare_ligand4.py -l lig27.mol2 -o $singlepath/lig27.pdbqt -U nphs_lps -v\n",
+    "!prepare_ligand4.py -l lig_27.mol2 -o $docking_path/lig_27.pdbqt -U nphs_lps -v\n",
     "# NOTE: for some reason, MGLtools does not recognize the ligand when inside a different folder\n",
     "# Here we are deleting the temporary PDB file required for generating the PDBQT file\n",
     "# os.remove(\"lig27.mol2\")"
@@ -1299,7 +1239,7 @@
     "v = Vina(sf_name='vina')\n",
     "\n",
     "# Setting the protein\n",
-    "v.set_receptor(os.path.join(singlepath,'6o6f.pdbqt'))\n",
+    "v.set_receptor(os.path.join(docking_path,'6o6f.pdbqt'))\n",
     "# Setting the ligand\n",
     "\n",
     "\n",
@@ -1391,7 +1331,7 @@
     "\n",
     "\n",
     "# Preparing the ligand for docking\n",
-    "!prepare_ligand4.py -l minlig27.mol2 -o $singlepath/lig27.pdbqt -U nphs_lps -v\n",
+    "!prepare_ligand4.py -l minlig27.mol2 -o $docking_path/lig27.pdbqt -U nphs_lps -v\n",
     "os.remove(\"minlig27.mol2\")\n",
     "```"
    ]
@@ -1410,7 +1350,7 @@
     "# Converting lig27 from SMILES into a 3D MOL2 format and perform a weighted rotor search for lowest energy conformer\n",
     "#Then, prepare ligand for docking using the Autodock script\n",
     "!obabel $ligandpath/lig27.smi -O lig27.mol2 --gen3d --best --canonical --conformers --weighted --nconf 50 --ff GAFF\n",
-    "!prepare_ligand4.py -l lig27.mol2 -o $singlepath/lig27.pdbqt -U nphs_lps -v\n",
+    "!prepare_ligand4.py -l lig27.mol2 -o $docking_path/lig27.pdbqt -U nphs_lps -v\n",
     "os.remove(\"lig27.mol2\")\n",
     "```"
    ]
@@ -1441,7 +1381,7 @@
    },
    "outputs": [],
    "source": [
-    "!zip -r singledocking.zip $singlepath\n",
+    "!zip -r singledocking.zip $docking_path\n",
     "#By default, automatic download is enabled through the following lines\n",
     "#but you need to disable your adblocker in order for it to work\n",
     "from google.colab import files\n",
