--- a/3_Docking/Docking.ipynb
+++ b/3_Docking/Docking.ipynb
@@ -466,7 +466,7 @@
     "In the case of X-ray diffraction, this experimental strategy does not discriminate between electron density coming from static protein atoms or water molecules, meaning that most protein structures solved by X-ray diffraction also include so-called **crystallographic waters** (check the non-bonded red dots on the protein structure below). These molecules are not important for our particular docking exercise and will remove them. However, water-mediated binding can be important and water molecules may be retained for docking.\n",
     "<figure>\n",
     "<center>\n",
-    "<img src='https://github.com/CCPBioSim/CCP5_Simulation_of_BioMolecules/blob/main/4_Docking/resources/4HW3.png?raw=1' />\n",
+    "<img src='https://github.com/CCPBioSim/CCP5_Simulation_of_BioMolecules/blob/main/3_Docking/resources/4HW3.png?raw=true'/>\n",
     "<figcaption>FIGURE 3. Cartoon representation of MCL1 (PDB accession ID 4hw3), with its N-to-C-terminal residues colored according to order and disorder</i></figcaption></center>\n",
     "</figure>\n",
     "\n",
@@ -1554,7 +1554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.0"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
