--- a/4_Simulation_Setup/1_ligand_in_water.ipynb
+++ b/4_Simulation_Setup/1_ligand_in_water.ipynb
@@ -168,8 +168,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if True:\n",
-    "  fin = open(f\"..{os.sep}4_Docking{os.sep}resources{os.sep}lig27.smi\", \"r\")\n",
+    "if False:\n",
+    "  fin = open(f\"..{os.sep}3_Docking{os.sep}resources{os.sep}lig_27.smi\", \"r\")\n",
     "  lig27_smiles = fin.readline().strip()\n",
     "  fin.close()\n",
     "  lig27_smiles\n",
@@ -800,7 +800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
