fixing from smiles

--- a/4_Simulation_Setup/1_ligand_in_water.ipynb
+++ b/4_Simulation_Setup/1_ligand_in_water.ipynb
@@ -168,13 +168,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if False:\n",
-    "  fin = open(f\"..{os.sep}3_Docking{os.sep}resources{os.sep}lig_27.smi\", \"r\")\n",
-    "  lig27_smiles = fin.readline().strip()\n",
-    "  fin.close()\n",
-    "  lig27_smiles\n",
+    "from rdkit import Chem\n",
+    "if True:\n",
+    "    fin = open(f\"..{os.sep}3_Docking{os.sep}resources{os.sep}lig_27.smi\", \"r\")\n",
+    "    lig27_smiles = fin.readline().strip()\n",
+    "    fin.close()\n",
+    "    lig27_smiles\n",
+    "    m = Chem.MolFromSmiles(lig27_smiles)\n",
+    "    ligand = Molecule.from_rdkit(m)\n",
     "else:\n",
-    "  lig27_smiles = \"[H:7][C@:6]1([C:13](=[C:11]([C:9](=[O:10])[O:8]1)[O:12][H:19])[O:14][H:20])[C@:3]([H:4])([C:2]([H:16])([H:17])[O:1][H:15])[O:5][H:18]\""
+    "    lig27_smiles = \"[H:7][C@:6]1([C:13](=[C:11]([C:9](=[O:10])[O:8]1)[O:12][H:19])[O:14][H:20])[C@:3]([H:4])([C:2]([H:16])([H:17])[O:1][H:15])[O:5][H:18]\"\n",
+    "    ligand = Molecule.from_mapped_smiles(lig27_smiles)"
    ]
   },
   {
